--- a/assets/custom css/toyota-page.css
+++ b/assets/custom css/toyota-page.css
@@ -18,7 +18,7 @@ section {
   width: 100px;
 }
 .logo {
-  margin-top: -1.5rem;
+  margin-top: 0;
 }
 .car-container {
   margin-top: 17vh;
